# DCSHUB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  tsconfig.node.json  vite.config.ts  启动开发模式.bat
.github/workflows/: ci.yml  release.yml
core/: DcsHub.Core.slnx
core/DcsHub.Core/: CoreStatusFactory.cs  Protocol.cs
core/DcsHub.Core.Host/: CoreLogger.cs  DcsHub.Core.Host.csproj  Program.cs
core/DcsHub.Core.Tests/: DcsHub.Core.Tests.csproj  Program.cs
core/DcsHub.Windows/: DcsHub.Windows.csproj  DcsProcessWatcher.cs  SenseVoiceService.cs
docs/: ARCHITECTURE.md  HANDOVER.md  RELEASES.md
docs/releases/: V2.1.23.md  V2.2.0.md  V2.5.1.md  V2.6.0.md
electron/: app-data.ts  main.ts  preload.ts
electron/core/: app-core.ts  event-bus.ts  native-core-client.ts  status.ts
electron/integrations/: README.md  windows-process.ts
electron/ipc/: dcs.ts  manual-library.ts  modules.ts  validation.ts
electron/logging/: diagnostic-logger.ts  rate-limited-logger.ts
electron/modules/: ModuleManager.ts  types.ts
electron/platform/: dcs-process-monitor.ts
electron/types/: pdf-parse.d.ts
native/vr-overlay/: CMakeLists.txt  DCSHUBManualOverlayLayer.json  THIRD_PARTY_NOTICES.md  bridge.cpp  layer.cpp  layer_probe.cpp  shared_protocol.h
scripts/: build-core.ps1  build-vr-overlay.ps1  prepare-speech-model.ps1  run-tests.mjs
src/: app.tsx  index.css  index.tsx  tailwind-theme.css
tests/: app-data.integration.ts  core-architecture.integration.ts  dcs-launch.integration.ts  electron-stub.ts  i18n.integration.ts  logging.integration.ts  manual-library.integration.ts  mod-manager.integration.ts  native-core.integration.ts  overlay-hotkey.integration.ts  software-catalog.integration.ts  srs.integration.ts  update.integration.ts  vr-overlay.integration.ts
(+78 files in other folders)
